# PointCloudUtils

./: .gitignore  .gitmodules  CMakeLists.txt  DownSample.cpp  SmoothFilter.cpp
includes/Args/: Args.hpp  ArgsParser.hpp
includes/CPP/: CopyAssignmentMove.hpp  Types.hpp
includes/CVCommon/: All.hpp  IO.hpp
includes/CameraGeometry/: CameraPose2PCL.hpp  CameraProjection.hpp  IO.hpp
includes/DataInterfaces/JSONHelper/: Reader.hpp
includes/DataInterfaces/NumPy/: IO.hpp
includes/DataInterfaces/Plain/: FromVector.hpp  Matrix.hpp
includes/Exception/: Common.hpp
includes/Filesystem/: Filesystem.hpp
includes/Geometry/: SimpleIntersection.hpp  TransformHelpers.hpp
includes/Graph/: Edge.hpp
includes/HoleBoundaryDetection/: BoundaryCriterion.hpp  HoleBoundaryDetector.hpp  HoleBoundaryProjector.hpp  OccupancyMapBuilder.hpp  ProximityGraph.hpp
includes/HoleBoundaryDetection/CUDA/: OccupancyMapBuilderRoutines.cu  OccupancyMapBuilderRoutines.h
includes/OccupancyMap/: FrontierMap.hpp  OccupancyMap.hpp  OccupancyMapBuilder.hpp
includes/OccupancyMap/CUDA/: OccupancyMapBuilderRoutines.cu  OccupancyMapBuilderRoutines.h
includes/PCCommon/: BBox.hpp  IO.hpp  NormalHelpers.hpp  Projection.hpp  Transform.hpp  common.hpp  extraction.hpp
includes/Profiling/: Instrumentor.hpp  ScopeTimer.hpp  SimpleTime.hpp
includes/Tools/: CropByOBBox.hpp
includes/Visualization/: Color.hpp  ListPoints.hpp  Print.hpp
src/: ClusterFilter.cpp  CropByBBox.cpp  DownSample.cpp  NormalEstimation.cpp  SmoothFilter.cpp  TryDisjointSet.cpp  TryTransformHelpers.cpp
src/CVCommon/: IO.cpp
src/CameraGeometry/: TryEigenQuaternion.cpp
src/DepthCompletion/: Simple.cpp  SimpleBBoxPlane.cpp  SimpleCameraPlane.cpp
src/HoleBoundaryDetection/: BuildOccupancyMap.cpp  DensityMap.cpp  FilterCamerasByBBox.cpp  HoleBoundaryDetection.cpp  HoleBoundaryDetector.cpp  HoleBoundaryProjection.cpp  HoleDepthCompletionDataGeneration.cpp  ProximityGraph.cpp  SavePolygonCoordinates.cpp
src/JSON/: TryJSON.cpp
src/Mesh/: CMakeLists.txt
src/Mesh/ConvertPLY/: CMakeLists.txt  ConvertPLY.cpp
src/Mesh/EnvelopSphere/: CMakeLists.txt  EnvelopSphere.cpp
src/Mesh/HoleFilling/: CMakeLists.txt  FillHoles.cpp  FillHolesWithPlane.cpp
src/Mesh/Reconstruction/: CMakeLists.txt  Reconstruction.cpp  ReconstructionTest.cpp
src/Mesh/Remeshing/: CMakeLists.txt  Remeshing.cpp  RemeshingTest.cpp
src/Mesh/RemoveFaces/: CMakeLists.txt  RemoveFaces.cpp
src/Mesh/Scripts/: TempConvertBBox.py
src/Mesh/ShapeDetection/: CMakeLists.txt  MovingPointsByPlaneDetection.cpp  ShapeDetection.cpp
src/Mesh/Simplification/: CMakeLists.txt  PointCloudSimplification.cpp
src/Mesh/includes/CGALCommon/: IO.hpp
src/OccupancyMap/: FrontierMap.cpp  OccupancyMap.cpp
src/Tools/: CMakeLists.txt  ClusterFilter.cpp  ColorFilter.cpp  CropByBBox.cpp  CropByOBBox.cpp  DownSample.cpp  FlipNormal.cpp  ICP.cpp  Merge.cpp  MoveCenter.cpp  NormalEstimation.cpp  SearchMergePointClouds.cpp  ShadowCrop.cpp  SmoothFilter.cpp
src/Trials/: CMakeLists.txt  TryArgumentParser.cpp  TryCMath.cpp  TryDisjointSet.cpp  TryEigen.cpp  TryMoveSemantics.cpp  TryOccupancyMap.cpp  TryOpenCV.cpp  TrySmartPointer.cpp  TryVector.cpp
src/Trials/CameraGeometry/: TryCSVIO.cpp  TryReadCameraMatrix.cpp
src/Trials/JSON/: TryJSON.cpp
src/Trials/OccupancyMap/: TryOccupancyMap.cpp  TryOctoMap.cpp
src/Trials/YAML/: TryYamlCpp.cpp
